# spotify_to_tidal

./: .gitignore  LICENSE  Makefile  README.MD  pyproject.toml
src/spotify_to_tidal/: main.py
